tests/expected_output/function-definition-not-allowed-here/000001-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/function-definition-not-allowed-here.c:4:16: error: function definition is not allowed here
int main(void) {
               ^
dcc explanation: there is likely a closing brace (curly bracket) missing before line 4.
Is a } missing in the previous function?
  See more information here: https://comp1511unsw.github.io/dcc/function-definition-not-allowed-here.html
